nenolod     2005/11/06 20:37:21 UTC	(20051106-3577)
  Log:
  Close the connection after doing the write operation -- we cant persist like with PostgreSQL.

  Changes:	Modified:
  +4 -0		trunk/backend/mysql.c (File Modified) 


alambert    2005/11/06 20:09:38 UTC	(20051106-3575)
  Log:
  chanacs, metadata: improve handling of NULL parameters. another extension of brian's report.

  Changes:	Modified:
  +21 -0	trunk/src/node.c (File Modified) 


alambert    2005/11/06 20:01:31 UTC	(20051106-3573)
  Log:
  chanacs_add(): bail if mychan or myuser is NULL. Based on brian's bugreport against flatfile.

  Changes:	Modified:
  +6 -0		trunk/src/node.c (File Modified) 


jilles      2005/11/06 19:54:01 UTC	(20051106-3571)
  Log:
  Add function
  void logcommand(void *svs, user_t *source, int level, const char *fmt, ...);
  to log commands sent to services. void *svs is actually a service_t *.
  level is LOGCMD_*.
  

  Changes:	Modified:
  +8 -0		trunk/include/atheme.h (File Modified) 
  +1 -0		trunk/include/extern.h (File Modified) 
  +43 -0	trunk/src/function.c (File Modified) 


alambert    2005/11/06 19:51:50 UTC	(20051106-3569)
  Log:
  flatfile: Fix crash when mc is null when adding chanacs. Reported by brian.

  Changes:	Modified:
  +1 -1		trunk/backend/flatfile.c (File Modified) 


jilles      2005/11/06 19:36:39 UTC	(20051106-3567)
  Log:
  Stop querying the database (mysql or postgresql)
  if a query fails, until the end of the current
  operation.
  
  This stops wallops floods.
  

  Changes:	Modified:
  +8 -0		trunk/backend/mysql.c (File Modified) 
  +7 -0		trunk/backend/postgresql.c (File Modified) 


jilles      2005/11/06 14:17:51 UTC	(20051106-3565)
  Log:
  - Fix some too low parc for channel_mode() for
    JOIN/SJOIN/BURST
  - monkey/ultimate3/inspircd: fix too high parc
    for channel_mode() for MODE
  - unreal: don't do channel_mode() for an SJOIN
    that doesn't contain simple modes
  

  Changes:	Modified: